# island-reactor

./: .gitmodules  Cargo.toml  REACTOR_BASE.md  UNSUPPORTED_REACTOR.md  app.manifest  build.rs
crates/island-reactor/: Cargo.toml
crates/island-reactor-setup/: Cargo.toml  build.rs
crates/island-reactor-setup/assets/: app.manifest
crates/island-reactor-setup/src/: lib.rs
crates/island-reactor/examples/: navigation_view_smoke.rs
crates/island-reactor/examples/gallery/src/pages/basic_input/: toggle_button.rs  toggle_switch.rs
crates/island-reactor/examples/gallery/src/pages/dialogs/: content_dialog.rs
crates/island-reactor/examples/gallery/src/pages/navigation/: mod.rs  tab_view.rs
crates/island-reactor/examples/gallery/src/pages/status/: progress_ring.rs
crates/island-reactor/src/: app.rs  bindings.rs  bindings_muxc.rs  bootstrap.rs  diagnostics.rs  lib.rs  xaml_interop.rs
crates/island-reactor/src/core/: backend.rs  element.rs  generated_bindings.rs
crates/island-reactor/src/core/widgets/: breadcrumb_bar.rs  expander.rs  info_badge.rs  info_bar.rs  mod.rs  navigation_view.rs  number_box.rs  relative_panel.rs  selector_bar.rs  teaching_tip.rs  text_block.rs  toggle_button.rs
crates/island-reactor/src/dsl/: modifiers.rs
crates/island-reactor/src/winui/: app_shim.rs  host.rs
crates/island-reactor/src/winui/backend/: convert.rs  generated_attach_event.rs  generated_set_prop.rs  mod.rs
crates/islands-reactor/: Cargo.toml
crates/islands-reactor-setup/: Cargo.toml  build.rs
crates/islands-reactor-setup/assets/: app.manifest
crates/islands-reactor-setup/runtime/arm64/: Islands.UI.Xaml.Automation.winmd  Islands.UI.Xaml.Controls.winmd
crates/islands-reactor-setup/runtime/x64/: Islands.UI.Xaml.Automation.winmd  Islands.UI.Xaml.Controls.pri  Islands.UI.Xaml.Controls.winmd  Microsoft.UI.Xaml.pri
crates/islands-reactor-setup/src/: iuxc_runtime.rs  lib.rs  muxc_runtime.rs
crates/islands-reactor/src/: app.rs  bindings.rs  bindings_iuxc.rs  bindings_muxc.rs  bootstrap.rs  diagnostics.rs  lib.rs
crates/islands-reactor/src/core/: backend.rs  element.rs  generated_bindings.rs  mod.rs  templated_list.rs
crates/islands-reactor/src/core/widgets/: expander.rs  mod.rs  radio_buttons.rs  rich_edit_box.rs  (+5 more)
crates/islands-reactor/src/dsl/: modifiers.rs
crates/islands-reactor/src/winui/: app_shim.rs  host.rs
crates/muxc-bindings/: Cargo.toml
crates/muxc-bindings/runtime/x64/: Microsoft.UI.Xaml.pri
crates/muxc-bindings/src/: bindings.rs  lib.rs  runtime.rs
crates/samples/: Cargo.toml
crates/samples/gallery/: Cargo.toml
crates/samples/gallery/src/: controls.rs
crates/samples/gallery/src/pages/basic_input/: combo_box.rs
crates/samples/gallery/src/pages/layout/: split_view.rs
crates/samples/gallery/src/pages/media/: person_picture.rs
crates/samples/gallery/src/pages/navigation/: navigation_view.rs  pivot.rs
crates/samples/hello/: Cargo.toml  build.rs
crates/tools/island-reactor-codegen/: Cargo.toml
crates/tools/island-reactor-codegen/src/: gen_attach.rs  gen_set_prop.rs  helpers.rs  main.rs  reactor_widgets.toml  schema.rs
crates/tools/islands-reactor-codegen/: Cargo.toml
crates/tools/islands-reactor-codegen/src/: gen_attach.rs  gen_set_prop.rs  helpers.rs  main.rs  metadata.rs  reactor_widgets.toml  schema.rs  toml_parser.rs
crates/winui2-setup/: Cargo.toml  build.rs
crates/winui2-setup/src/: lib.rs
crates/xaml-bindings/: Cargo.toml  build.rs
crates/xaml-bindings/src/: lib.rs
docs/: PROJECT_HANDOFF.md  REACTOR_BASE.md  UNSUPPORTED_REACTOR.md
examples/: hello.rs
examples/gallery/src/: controls.rs  main.rs  registry.rs  router.rs  shell.rs
examples/gallery/src/pages/: home.rs  settings.rs
samples/demo/: Cargo.toml  build.rs
samples/demo/src/: main.rs
samples/gallery/: Cargo.toml
samples/gallery/src/: controls.rs  main.rs  registry.rs  router.rs  shell.rs
samples/gallery/src/pages/: home.rs  mod.rs  settings.rs  title_bar.rs
samples/gallery/src/pages/basic_input/: button.rs  check_box.rs  color_picker.rs  combo_box.rs  drop_down_button.rs  hyperlink_button.rs  number_box.rs  password_box.rs  radio_button.rs  rating_control.rs  repeat_button.rs  slider.rs  split_button.rs  text_box.rs  toggle_button.rs  toggle_switch.rs
samples/gallery/src/pages/collections/: flip_view.rs  grid_view.rs  list_box.rs  list_view.rs  tree_view.rs
samples/gallery/src/pages/date_time/: calendar_date_picker.rs  calendar_view.rs  date_picker.rs  time_picker.rs
samples/gallery/src/pages/design/: color.rs  geometry.rs  iconography.rs  materials.rs  spacing.rs  theme.rs  typography.rs
samples/gallery/src/pages/dialogs/: command_bar_flyout.rs  content_dialog.rs  flyout.rs  menu_flyout.rs  teaching_tip.rs
samples/gallery/src/pages/layout/: border.rs  canvas.rs  expander.rs  grid.rs  relative_panel.rs  scroll_view.rs  split_view.rs  stack_panel.rs  viewbox.rs
samples/gallery/src/pages/media/: image.rs  person_picture.rs
samples/gallery/src/pages/menus/: command_bar.rs  menu_bar.rs  selector_bar.rs
samples/gallery/src/pages/navigation/: breadcrumb_bar.rs  navigation_view.rs  pivot.rs  tab_view.rs  title_bar.rs
samples/gallery/src/pages/status/: info_badge.rs  info_bar.rs  progress_bar.rs  progress_ring.rs  tool_tip.rs
samples/gallery/src/pages/text/: auto_suggest_box.rs  rich_edit_box.rs  rich_text_block.rs  type_ramp.rs
samples/hello/: Cargo.toml
samples/hello/src/: main.rs
src/: app.rs  bindings.rs  lib.rs  main.rs
src/core/: backend.rs  callback.rs  context.rs  element.rs  mod.rs  render_host.rs  tooltip.rs  widget.rs
src/core/reconciler/: widget_dispatch.rs
src/core/widgets/: auto_suggest_box.rs  breadcrumb_bar.rs  canvas.rs  combo_box.rs  command_bar.rs  content_dialog.rs  image.rs  info_bar.rs  menu_bar.rs  mod.rs  navigation_view.rs  number_box.rs  password_box.rs  progress_ring.rs  radio_buttons.rs  split_button.rs  split_view.rs  tab_view.rs  teaching_tip.rs
src/dsl/: modifiers.rs
src/winui/: app_shim.rs  dispatcher.rs  hooks.rs  host.rs  mod.rs  template_cache.rs
src/winui/backend/: mod.rs
(+53 files in other folders)
