[package]
name = "island-reactor"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/island-reactor-setup",
    "crates/xaml-bindings",
]
resolver = "3"

[workspace.dependencies]
windows = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-bindgen = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-collections = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-core = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-future = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-numerics = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-reference = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-threading = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-time = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }

[dependencies]
rustc-hash = "2.1.1"
windows = { workspace = true, features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true }
windows-collections = { workspace = true, features = ["std"] }
windows-future = { workspace = true }
windows-numerics = { workspace = true }
windows-threading = { workspace = true, features = ["std"] }
windows-time = { workspace = true, features = ["std"] }
xaml-bindings = { path = "crates/xaml-bindings" }

[build-dependencies]
island-reactor-setup = { path = "crates/island-reactor-setup" }

[[example]]
name = "gallery"
path = "examples/gallery/src/main.rs"

[features]
default = ["diagnostics"]
diagnostics = []
