[workspace]
members = [
    "crates/islands-reactor",
    "crates/islands-reactor-setup",
    "crates/tools/islands-reactor-codegen",
    "samples/*",
]
resolver = "3"

[workspace.dependencies]
windows = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-bindgen = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-collections = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-core = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-future = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-metadata = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-numerics = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-reference = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-threading = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
windows-time = { git = "https://github.com/microsoft/windows-rs", rev = "62af965b827a68079605ee6461241764e4a6374b", default-features = false }
