[package]
name = "island-reactor"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "2.1.1"
windows = { workspace = true, features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true, features = ["proc-macros"] }
windows-collections = { workspace = true, features = ["std"] }
windows-future = { workspace = true }
windows-numerics = { workspace = true }
windows-reference = { workspace = true, features = ["std"] }
windows-threading = { workspace = true, features = ["std"] }
windows-time = { workspace = true, features = ["std"] }

[features]
default = ["diagnostics"]
diagnostics = []
