[package]
name = "muxc-bindings"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["bindings"]
bindings = []

[dependencies]
xaml-bindings = { path = "../xaml-bindings" }
windows = { workspace = true, features = [
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
] }
windows-core = { workspace = true }
windows-collections = { workspace = true }
windows-future = { workspace = true }
windows-numerics = { workspace = true }
windows-reference = { workspace = true, features = ["std"] }
windows-time = { workspace = true, features = ["std"] }
