[package]
name = "xaml-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-collections = "0.3.2"
windows-numerics = "0.3.1"

[build-dependencies]
windows-bindgen = "0.66.0"
