[package]
name = "xaml-bindings"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
windows = { workspace = true, features = [
    "ApplicationModel_Core",
    "ApplicationModel_Resources_Core",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true }
windows-collections = { workspace = true }
windows-future = { workspace = true }
windows-numerics = { workspace = true }
windows-reference = { workspace = true, features = ["std"] }
windows-time = { workspace = true, features = ["std"] }
