[package]
name = "islands-reactor-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
islands-reactor = { path = "../../crates/islands-reactor" }

[build-dependencies]
islands-reactor-setup = { path = "../../crates/islands-reactor-setup" }

[[bin]]
name = "demo"
path = "src/main.rs"
