[package]
name = "islands-reactor-hello"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
islands-reactor = { path = "../../crates/islands-reactor" }

[build-dependencies]
islands-reactor-setup = { path = "../../crates/islands-reactor-setup" }

[[bin]]
name = "hello"
path = "src/main.rs"
