[package]
name = "island-reactor-codegen"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cargo_metadata = "0.19"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
windows-bindgen = { workspace = true }
windows-metadata = { workspace = true }
xmltree = "0.11"
